<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.accounts.LoginActivity"
    android:background="@drawable/landlog"

    >


        <TextView
            android:id="@+id/txtviewlogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/txtview_smartcity"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/txteditusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/loginedittext_bg"
            android:ems="14"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txteditpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/loginedittext_bg"
            android:ems="14"
            android:hint="@string/txtedit_hint_password"
            android:inputType="textPassword"
            android:maxEms="10"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkboxremember"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/remember_me"
        android:textStyle="bold" />
    <TextView
        android:padding="5dp"
        android:id="@+id/txtforgetpass"
        android:layout_marginLeft="80dp"
        android:text="@string/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bntregister"
                android:layout_width="104dp"
                android:layout_height="35dp"
                android:layout_marginLeft="70dp"
                android:background="@drawable/bg_btn"
                android:text="@string/register"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bntlogin"
                android:layout_width="104dp"
                android:layout_height="35dp"
                android:layout_marginStart="80dp"
                android:background="@drawable/bg_btn"
                android:text="@string/bnttxtlogin"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

    <TextView
        android:id="@+id/txtviewlogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_social_account"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgbntglogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />

</LinearLayout>