<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.accounts.RegisterActivity"
    android:background="@drawable/landlog"
    >

    <TextView
        android:id="@+id/txtviewreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_gravity="center"
        android:text="@string/register_textview_reg"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="34dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/txteditregfullname"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/fullnamereg"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@drawable/loginedittext_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />


    <EditText
        android:id="@+id/txteditregpassword"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/loginedittext_bg"
        android:ems="14"
        android:hint="@string/passwordreg"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <ProgressBar
        android:id="@+id/passprogressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"></ProgressBar>
    <TextView
        android:id="@+id/txtpasswords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text=""
        android:textSize="16sp"
        android:layout_marginLeft="70dp"
        />
    <EditText
        android:id="@+id/txteditregpasswordconfirm"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/loginedittext_bg"
        android:ems="14"
        android:hint="Password confirm"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/txteditregemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginedittext_bg"
        android:ems="14"
        android:hint="@string/emailreg"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <EditText
        android:id="@+id/txteditphoneno"
        android:maxLength="12"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loginedittext_bg"
        android:ems="14"
        android:hint="@string/phone_number_reg"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <Button
        android:id="@+id/bntsubmitreg"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:ems="8"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />
</LinearLayout>